--- a/src/net/vjdv/baz/pe/Inicio.fxml
+++ b/src/net/vjdv/baz/pe/Inicio.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
+<?import net.vjdv.baz.pe.AutocompletionTextField?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -54,7 +55,7 @@
       <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="200.0" spacing="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="24.0">
          <children>
             <Label minWidth="50.0" text="Servidor:" />
-            <TextField fx:id="uriText" prefWidth="1000.0" />
+            <AutocompletionTextField fx:id="uriText" prefWidth="1000.0" />
          </children>
          <padding>
             <Insets left="5.0" right="5.0" />
