--- a/src/net/vjdv/baz/pe/Inicio.fxml
+++ b/src/net/vjdv/baz/pe/Inicio.fxml
@@ -7,11 +7,10 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
-<?import net.vjdv.baz.pe.AutocompletionTextField?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import net.vjdv.baz.pe.AutocompletionTextField?>
 
 <AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.91" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.vjdv.baz.pe.InicioController">
     <children>
@@ -47,7 +46,7 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Ayuda">
             <items>
-              <MenuItem mnemonicParsing="false" text="Ayúdate y te ayudaré" />
+              <MenuItem mnemonicParsing="false" onAction="#ayuda" text="Ayúdate y te ayudaré" />
             </items>
           </Menu>
         </menus>
