--- a/src/net/vjdv/baz/pe/Inicio.fxml
+++ b/src/net/vjdv/baz/pe/Inicio.fxml
@@ -7,11 +7,17 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import net.vjdv.baz.pe.AutocompletionTextField?>
 
+<?import javafx.scene.control.ToggleButton?>
 <AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.91" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.vjdv.baz.pe.InicioController">
     <children>
       <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -60,7 +66,30 @@
             <Insets left="5.0" right="5.0" />
          </padding>
       </HBox>
-      <TabPane fx:id="tabs" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="54.0" />
+      <TabPane fx:id="tabs" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="54.0" />
+        <fx:define>
+            <Image fx:id="tableImage" url="/net/vjdv/baz/pe/logoGrid.png"  />
+            <ToggleGroup fx:id="salidaGroup"/>
+        </fx:define>
+        <HBox AnchorPane.leftAnchor="5.0" AnchorPane.bottomAnchor="5.0" spacing="3">
+            <ToggleButton toggleGroup="$salidaGroup" selected="true" userData="TABLA">
+                <graphic>
+                    <ImageView image="$tableImage" fitWidth="16" fitHeight="16" />
+                </graphic>
+                <tooltip>
+                    <Tooltip text="Salida a tabla" />
+                </tooltip>
+            </ToggleButton>
+            <ToggleButton text="JSON" toggleGroup="$salidaGroup" userData="JSON">
+                <tooltip><Tooltip text="Salida a JSON" /></tooltip>
+            </ToggleButton>
+            <ToggleButton text="CVS" toggleGroup="$salidaGroup" userData="CSV">
+                <tooltip><Tooltip text="Salida a CSV" /></tooltip>
+            </ToggleButton>
+            <ToggleButton text="TXT" toggleGroup="$salidaGroup" userData="TXT">
+                <tooltip><Tooltip text="Salida a texto" /></tooltip>
+            </ToggleButton>
+        </HBox>
         <Button fx:id="submit" layoutX="126" layoutY="90" onAction="#enviarConsulta" text="Enviar Consulta" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0" />
       <Label fx:id="info" layoutX="27.0" layoutY="277.0" text="Información" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" />
     </children>
